Closed
Bug 1217565
Opened 10 years ago
Closed 10 years ago
Fix widget assertion to take bug 1213567 into account
Categories
(Core :: Widget: Win32, defect)
Core
Widget: Win32
Tracking
()
RESOLVED
FIXED
mozilla44
People
(Reporter: bugzilla, Assigned: bugzilla)
References
Details
Attachments
(1 file)
|
1.17 KB,
patch
|
jimm
:
review+
lizzard
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
This needs to be fixed before 43 goes to beta.
| Assignee | ||
Comment 1•10 years ago
|
||
Attachment #8677656 -
Flags: review?(jmathies)
Updated•10 years ago
|
Attachment #8677656 -
Flags: review?(jmathies) → review+
| Assignee | ||
Updated•10 years ago
|
Keywords: checkin-needed
| Assignee | ||
Comment 2•10 years ago
|
||
Comment on attachment 8677656 [details] [diff] [review]
Patch
Approval Request Comment
[Feature/regressing bug #]: bug 1213567
[User impact if declined]: assertions when 43 goes to beta with asyncInit
[Describe test coverage new/current, TreeHerder]: plugin test suite
[Risks and why]: None, updates a sanity check
[String/UUID change made/needed]: None
Attachment #8677656 -
Flags: approval-mozilla-aurora?
Keywords: checkin-needed
Comment 4•10 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox44:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Comment 5•10 years ago
|
||
Comment on attachment 8677656 [details] [diff] [review]
Patch
OK to uplift, good that this gets caught before 43 goes to beta.
Attachment #8677656 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 6•10 years ago
|
||
status-firefox43:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•