Bug 1217565 - Fix assertion in nsWindow::IPCWindowProcHandler to account for suppressed neutering; r=jimm, a=lizzard